--- a/sass/module/_register.scss
+++ b/sass/module/_register.scss
@@ -1,7 +1,7 @@
 .register-container {
     height: 100vh;
-    background-color: #08AEEA;
-    background-image: linear-gradient(19deg, #454DB0 0%, #292B5C 100%);
+    background-color: $lmain;
+    background-image: linear-gradient(19deg, $main 0%, $dmain 100%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,7 +17,7 @@
     border-radius: 25px;
     overflow: hidden;
     .l-sidebar {
-        background-color: #292B5C;
+        background-color: $dmain;
         width: 50%;
         height: 100%;
         display: flex;
@@ -62,7 +62,7 @@
                     margin: 0 auto;
                     height: 80px;
                     width: 80px;
-                    background: url("http://paartheepan94.free.fr/Algo/next.png") no-repeat;
+                    background: url("../img/next.png") no-repeat;
                     background-size: 70% 70%;
                     background-position: center;
                 }
@@ -111,16 +111,16 @@
                 }
                 .submit {
                     display: flex;
-                    justify-content: center;
+                    justify-content: space-around;
                     align-items: center;
                 }
                 .submit-btn {
-                    margin: 25px auto;
+                    margin: 25px;
                     display: inline-block;
                     width: 50%;
                     font-weight: 700;
                     background-color: #fff;
-                    color: #292B5C;
+                    color: $dmain;
                     text-align: center;
                     text-decoration: none;
                     padding: 15px;
