--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,11 @@
 
  @import 'base/normalize';
  @include normalize;
- @import 'theme/colors';
 
+ 
+ @import 'theme/colors';
+ 
  @import 'module/header';
  @import 'module/register';
+ 
+ @import 'state/errors';
