--- a/css/style.css
+++ b/css/style.css
@@ -459,8 +459,8 @@ template {
 
 .register-container {
   height: 100vh;
-  background-color: #08AEEA;
-  background-image: linear-gradient(19deg, #454db0 0%, #292b5c 100%);
+  background-color: #85c6ea;
+  background-image: linear-gradient(19deg, #44a8df 0%, #18638c 100%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -477,7 +477,7 @@ template {
   overflow: hidden;
 }
 .register-box .l-sidebar {
-  background-color: #292B5C;
+  background-color: #18638c;
   width: 50%;
   height: 100%;
   display: flex;
@@ -579,11 +579,43 @@ template {
   width: 50%;
   font-weight: 700;
   background-color: #fff;
-  color: #292B5C;
+  color: #18638c;
   text-align: center;
   text-decoration: none;
   padding: 15px;
   border-radius: 25px;
+}
+
+.main-feed-container {
+  background-image: linear-gradient(19deg, #44a8df 0%, #18638c 100%);
+  font-family: Arial, sans-serif;
+}
+
+.news-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: space-around;
+  flex-wrap: wrap;
+  width: 90%;
+}
+.news-container .news-items {
+  width: 250px;
+  padding: 25px;
+  margin: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 18px;
+}
+.news-container .news-boxes h3 {
+  position: relative;
+}
+.news-container .news-boxes h3:after {
+  content: '';
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #000;
 }
 
 .alert {
