--- a/sass/module/_newsfeeds.scss
+++ b/sass/module/_newsfeeds.scss
@@ -5,14 +5,15 @@
 
 .news-container {
 	display: flex;
-	justify-content: flex-start;
-	align-items: space-around;
+    justify-content: center;
+    margin: 0 auto;
 	flex-wrap: wrap;
-	width: 90%;
+    width: 90%;
+    overflow-x: scroll;
 	.news-items {
 		width: 250px;
 		padding: 25px;
-		margin: 10px;
+        margin: 10px;
 		background-color:rgba(255,255,255,0.8);
 		border-radius: 18px;
 	}
@@ -20,14 +21,14 @@
 		h3 {
 		position: relative;
 			&:after {
-			content: '';
-			position: absolute;
-			bottom: -4px;
-			left: 0;
-			width: 100%;
-			height: 2px;
-			background-color: #000;
-		}
+                content: '';
+                position: absolute;
+                bottom: -4px;
+                left: 0;
+                width: 100%;
+                height: 2px;
+                background-color: #000;
+		    }
 		}
 	}
 }
