--- a/css/style.css
+++ b/css/style.css
@@ -450,11 +450,33 @@ template {
 }
 
 .delete-cross {
-  width: 10px;
-  height: 10px;
-  background-color: red;
+  width: 20px;
+  height: 20px;
+  background: url("../img/cross.png");
+  background-size: 100% 100%;
+  opacity: 0.5;
   display: block;
   float: right;
+  position: relative;
+  right: -8px;
+  top: 20px;
+}
+.delete-cross:hover {
+  opacity: 0.8;
+}
+
+.newsId {
+  display: block;
+  float: right;
+  background: url("../img/fav.png") no-repeat;
+  background-size: 100% 100%;
+  width: 16px;
+  height: 16px;
+  opacity: 0.8;
+  cursor: pointer;
+}
+.newsId:hover {
+  opacity: 1;
 }
 
 /**
@@ -463,6 +485,58 @@ template {
 .header .header__nav {
   background-color: #000000;
   height: 60px;
+}
+
+.menu-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Arial, sans-serif;
+  background-color: #fff;
+  width: 100%;
+  -moz-box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.04);
+  -webkit-box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.04);
+  box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.04);
+}
+.menu-container .logo-container {
+  margin-left: 30px;
+}
+.menu-container .logo-container img {
+  padding: 10px 0;
+  width: 50px;
+}
+.menu-container .menu {
+  margin-right: 30px;
+}
+.menu-container .menu ul {
+  padding-left: 0;
+}
+.menu-container .menu ul li {
+  display: inline-block;
+  margin-left: 15px;
+}
+.menu-container .menu ul li:nth-child(1) {
+  margin-left: 0;
+}
+.menu-container .menu ul li a {
+  text-decoration: none;
+  color: #18638c;
+  display: block;
+  position: relative;
+}
+.menu-container .menu ul li a:hover:after {
+  transform: scaleX(1);
+}
+.menu-container .menu ul li a:after {
+  content: '';
+  position: absolute;
+  bottom: -6px;
+  height: 2px;
+  left: 0;
+  right: 0;
+  background-color: #44A8DF;
+  transform: scalex(0);
+  transition: transform 0.2s ease;
 }
 
 .register-container {
@@ -597,6 +671,8 @@ template {
 .main-feed-container {
   background-image: linear-gradient(19deg, #44a8df 0%, #18638c 100%);
   font-family: Arial, sans-serif;
+  overflow: hidden;
+  *zoom: 1;
 }
 
 .news-container {
@@ -604,15 +680,22 @@ template {
   justify-content: center;
   margin: 0 auto;
   flex-wrap: wrap;
+  margin-top: 30px;
   width: 90%;
   min-height: 100vh;
 }
 .news-container .news-items {
   width: 250px;
-  padding: 25px;
+  padding: 12px 25px;
   margin: 10px;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 18px;
+}
+.news-container .news-boxes {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 3px 15px 12px 15px;
+  border-radius: 15px;
+  margin-top: 12px;
 }
 .news-container .news-boxes h3 {
   position: relative;
@@ -637,4 +720,14 @@ template {
 }
 .alert-success {
   background-color: rgba(0, 172, 37, 0.8);
+}
+
+.errors-displaying {
+  margin-top: 7px;
+  margin-right: 5px;
+  float: right;
+}
+.errors-displaying .alert {
+  padding: 15px 35px;
+  color: white;
 }
