--- a/sass/module/_newsfeeds.scss
+++ b/sass/module/_newsfeeds.scss
@@ -1,22 +1,28 @@
 .main-feed-container {
 	background-image: linear-gradient(19deg, $main 0%, $dmain 100%);
 	font-family: Arial, sans-serif;
+	@include clearfix;
 }
 .news-container {
 	display: flex;
     justify-content: center;
     margin: 0 auto;
 	flex-wrap: wrap;
+	margin-top: 30px;
 	width: 90%;
 	min-height: 100vh;
 	.news-items {
 		width: 250px;
-		padding: 25px;
-        margin: 10px;
+		padding:  12px 25px;
+		margin: 10px;
 		background-color:rgba(255,255,255,0.8);
 		border-radius: 18px;
 	}
 	.news-boxes {
+		background-color: rgba(255, 255, 255, 0.8);
+		padding: 3px 15px 12px 15px;
+		border-radius: 15px;
+		margin-top: 12px;
 		h3 {
 		position: relative;
 			&:after {
