--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,7 @@
  @import 'theme/colors';
  
  @import 'module/header';
+ @import 'module/menu';
  @import 'module/register';
  @import 'module/newsfeeds';
  
