--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/**
+ * Colors Theme
+ */
 /*! normalize-scss | MIT/GPLv2 License | bit.ly/normalize-scss */
 /* Document
    ========================================================================== */
@@ -449,6 +452,36 @@ template {
   display: none;
 }
 
+.btn {
+  display: block;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+  width: 180px;
+  height: 50px;
+  text-decoration: none;
+  box-shadow: 0 0px 30px rgba(255, 255, 255, 0.4);
+  -moz-border-radius: 70px;
+  -webkit-border-radius: 70px;
+  border-radius: 70px;
+  border: 2px solid #fff;
+  color: #fff;
+  transition: all 0.3s;
+}
+.btn:hover {
+  color: #fff;
+  background-color: #44A8DF;
+  box-shadow: 0 0px 30px rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+  -moz-transform: translateY(-5px);
+  -ms-transform: translateY(-5px);
+  -webkit-transform: translateY(-5px);
+  transform: translateY(-5px);
+}
+
 .delete-cross {
   width: 20px;
   height: 20px;
@@ -479,14 +512,138 @@ template {
   opacity: 1;
 }
 
-/**
- * Colors Theme
- */
 .header .header__nav {
-  background-color: #000000;
+  background-color: #000;
   height: 60px;
 }
 
+.home {
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100vh;
+  width: 100%;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+  background: url("../img/fond.jpg") no-repeat;
+  background-size: 100% 100%;
+}
+
+.home-container {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  width: 60%;
+}
+.home-container .home-logo img {
+  width: 200px;
+  height: 200px;
+}
+.home-container .header-hello h2 {
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  font-size: 2em;
+  transition: all 0.3s;
+  opacity: 1;
+  position: relative;
+  display: block;
+  padding: 20px;
+  border-bottom: 2px solid white;
+  border-width: 80%;
+}
+.home-container .form-language {
+  width: 50%;
+}
+.home-container .language-selector {
+  display: -webkit-flex;
+  display: flex;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: space-around;
+  justify-content: space-around;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  margin: 25px auto;
+  width: 100%;
+}
+.home-container .language-selector .language-input {
+  opacity: 0;
+  display: block;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+}
+.home-container .language-selector .language {
+  width: 110px;
+  height: 40px;
+  transition: all 0.3s ease;
+}
+.home-container .language-selector .language:hover {
+  transform: scale(1.25);
+  cursor: pointer;
+}
+.home-container .language-selector .french {
+  background: url("../img/france.svg") no-repeat center;
+  background-size: cover;
+}
+.home-container .language-selector .english {
+  background: url("../img/uk.svg") no-repeat center;
+  background-size: 100% 294%;
+}
+.home-container .language-selector .bulgaria {
+  background: url("../img/bulgaria.svg") no-repeat center;
+  background-size: 200% 280%;
+}
+.home-container .language-selector .selected {
+  -moz-transform: scale(1.25);
+  -ms-transform: scale(1.25);
+  -webkit-transform: scale(1.25);
+  transform: scale(1.25);
+  transition: all 0.3s;
+  box-shadow: 0 0px 30px rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+}
+.home-container .language-selector .unselected {
+  -webkit-filter: grayscale(50%);
+  filter: grayscale(50%);
+}
+.home-container .btn {
+  margin: 25px auto;
+}
+.home-container .btn b {
+  color: #fff;
+}
+.home-container .btn:hover {
+  background-color: #fff;
+}
+.home-container .btn:hover b {
+  color: #0d0d0d;
+}
+
+@media only screen and (max-width: 768px) {
+  .home-container {
+    width: 100%;
+  }
+  .home-container .form-language {
+    width: 100%;
+  }
+  .home-container .header-hello h2 {
+    font-size: 1.5em;
+  }
+  .home-container .language-selector {
+    width: 100%;
+  }
+}
 .menu-container {
   display: flex;
   justify-content: space-between;
