--- a/sass/theme/_colors.scss
+++ b/sass/theme/_colors.scss
@@ -2,7 +2,9 @@
  * Colors Theme
  */
 
-$black: #000000;
+$white: #fff;
+$black: #000;
+$grey: lighten(#000, 5);
 $main: #44A8DF;
 $dmain: darken($main, 25);
 $lmain: lighten($main, 15);
