--- a/sass/module/_home.scss
+++ b/sass/module/_home.scss
@@ -37,6 +37,7 @@
             padding: 20px;
             border-bottom: 2px solid white;
             border-width: 80%;
+            text-shadow: 4px 2px 2px rgba(0, 0, 0, 1);
         }
     }
 
