--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,6 +14,7 @@
  @import 'module/home';
  @import 'module/menu';
  @import 'module/register';
+ @import 'module/favorite';
  @import 'module/newsfeeds';
  
  @import 'state/errors';
